--- a/category.html
+++ b/category.html
@@ -26,25 +26,34 @@
                         </div>
                         <div class="wm-block__buttons">
                             <div class="wm-buttons">
-                                <a class="wm-buttons__link" href="#">Расчет своего проекта</a><button class="wm-buttons__callback">заказать звонок</button>
+                                <div class="wm-buttons__link">
+                                    <a class="wm-buttons-link" href="#">Расчет своего проекта</a>
+                                </div>
+                                <div class="wm-buttons__callback">
+                                    <button class="wm-buttons-callback under-btn">заказать звонок</button>
+                                </div>
                             </div>
                         </div>
                         <div class="wm-block__contact">
                             <div class="wm-contact">
-                                <div class="wm-contact__phone">8&nbsp;(495)&nbsp;991&ndash;37&ndash;41</div>
-                                <div class="wm-contact__email">zakaz@woodmen.ru</div>
+                                <div class="wm-contact__phone">
+                                    <span class="wm-contact-phone">8&nbsp;(495)&nbsp;991&ndash;37&ndash;41</span>
+                                </div>
+                                <div class="wm-contact__email">
+                                    <span class="wm-contact-email">zakaz@woodmen.ru</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="wm-top__navigation">
                         <nav class="wm-navigation">
                             <ul>
-                                <li><a href="#">О компании</a></li>
-                                <li><a href="#">Проекты</a></li>
-                                <li><a href="#">Цены</a></li>
-                                <li><a href="#">Наши работы</a></li>
-                                <li><a href="#">Отзывы</a></li>
-                                <li><a href="#">Контакты</a></li>
+                                <li><a href="#" class="wm-navigation__link">О компании</a></li>
+                                <li><a href="#" class="wm-navigation__link">Проекты</a></li>
+                                <li><a href="#" class="wm-navigation__link">Цены</a></li>
+                                <li><a href="#" class="wm-navigation__link">Наши работы</a></li>
+                                <li><a href="#" class="wm-navigation__link">Отзывы</a></li>
+                                <li><a href="#" class="wm-navigation__link">Контакты</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -55,32 +64,32 @@
             <div class="main">
                 <div class="wm-bot">
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/doma_iz_brusa.png" alt="doma_iz_brusa" width="184" height="129"/></div>
                             <div class="wm-block-category__title">Дома из бруса</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/karkasnie_doma.png" alt="doma_iz_brusa" width="163" height="129"/></div>
                             <div class="wm-block-category__title">Каркасные дома</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/doma_pod_usadku.png" alt="doma_iz_brusa" width="177" height="129"/></div>
                             <div class="wm-block-category__title">Дома под усадку</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/bani_iz_brusa.png" alt="doma_iz_brusa" width="171" height="129"/></div>
                             <div class="wm-block-category__title">Бани из бруса</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -101,7 +110,7 @@
     <!-- Section description -->
     <section class="content-block content-block-2 wm-description">
         <div class="main">
-            <h2 class="wm-description__title main-title">Бесплатная консультация</h2>
+            <h2 class="wm-description__title main-title">Дома из бруса</h2>
             <div class="wm-description__sub-title">Мы объединили дома в категории для Вашего удобства</div>
             <div class="wm-description__text">Выберите любое значение в одной из категорий</div>
         </div>
@@ -119,19 +128,19 @@
                             <ul class="wm-filter-radio-block">
                                 <li>
                                     <input type="radio" name="wm-filter" value="6x6" id="wm-filter-size-1" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-size-1">6 x 6</label>
+                                    <label class="main-btn" for="wm-filter-size-1">6 x 6</label>
                                 </li>
                                 <li>
                                     <input type="radio" name="wm-filter" value="8x6" id="wm-filter-size-2" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-size-2">8 x 6</label>
+                                    <label class="main-btn" for="wm-filter-size-2">8 x 6</label>
                                 </li>
                                 <li>
                                     <input type="radio" name="wm-filter" value="9x6" id="wm-filter-size-3" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-size-3">9 x 6</label>
+                                    <label class="main-btn" for="wm-filter-size-3">9 x 6</label>
                                 </li>
                                 <li>
                                     <input type="radio" name="wm-filter" value="9x7" id="wm-filter-size-4" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-size-4">9 x 7</label>
+                                    <label class="main-btn" for="wm-filter-size-4">9 x 7</label>
                                 </li>
                             </ul>
                         </div>
@@ -142,15 +151,15 @@
                             <ul class="wm-filter-radio-block">
                                 <li>
                                     <input type="radio" name="wm-filter" value="to-300" id="wm-filter-price-1" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-price-1">до 300 т. руб</label>
+                                    <label class="main-btn" for="wm-filter-price-1">до 300 т. руб</label>
                                 </li>
                                 <li>
                                     <input type="radio" name="wm-filter" value="300-500" id="wm-filter-price-2" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-price-2">300-500 т. руб</label>
+                                    <label class="main-btn" for="wm-filter-price-2">300-500 т. руб</label>
                                 </li>
                                 <li>
                                     <input type="radio" name="wm-filter" value="from-500" id="wm-filter-price-3" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-price-3">от 500 т. руб</label>
+                                    <label class="main-btn" for="wm-filter-price-3">от 500 т. руб</label>
                                 </li>
                             </ul>
                         </div>
@@ -161,15 +170,15 @@
                             <ul class="wm-filter-radio-block">
                                 <li>
                                     <input type="radio" name="wm-filter" value="to-100" id="wm-filter-square-1" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-square-1">до 100 м2</label>
+                                    <label class="main-btn" for="wm-filter-square-1">до 100 м2</label>
                                 </li>
                                 <li>
                                     <input type="radio" name="wm-filter" value="100-200" id="wm-filter-square-2" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-square-2">100-200 м2</label>
+                                    <label class="main-btn" for="wm-filter-square-2">100-200 м2</label>
                                 </li>
                                 <li>
                                     <input type="radio" name="wm-filter" value="from-200" id="wm-filter-square-3" class="wm-filter-radio-block__input">
-                                    <label for="wm-filter-square-3">от 200 м2</label>
+                                    <label class="main-btn" for="wm-filter-square-3">от 200 м2</label>
                                 </li>
                             </ul>
                         </div>
@@ -178,12 +187,10 @@
                 <div class="wm-sorting-block">
                     <div class="wm-sorting-block__item">
                         <div class="wm-sorting-radio-block">
-                            <span class="wm-sorting-radio-block__text">Сортировать по цене</span><span class="wm-sorting-radio-block__input">
-                            <input type="radio" name="wm-sorting" id="wm-sorting-1" class="wm-sorting__input" value="up">
-                            <label for="wm-sorting-1"><i class="fa fa-chevron-circle-up" aria-hidden="true"></i></label>
-                            <input type="radio" name="wm-sorting" id="wm-sorting-2" class="wm-sorting__input" value="down">
-                            <label for="wm-sorting-2"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></label>
-                            </span>
+                            <span class="wm-sorting-radio-block__text">Сортировать по цене</span>
+                            <div class="wm-sorting-radio-block__input">
+                                <input type="radio" name="wm-sorting" id="wm-sorting-1" class="wm-sorting__input" value="up"><label for="wm-sorting-1"><i class="fa fa-chevron-circle-up" aria-hidden="true"></i></label><input type="radio" name="wm-sorting" id="wm-sorting-2" class="wm-sorting__input" value="down"><label for="wm-sorting-2"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></label>
+                            </div>
                         </div>
                     </div>
                     <div class="wm-sorting-block__item">
@@ -199,7 +206,7 @@
     <section class="content-block content-block-4 wm-category-projects">
         <div class="main">
             <div class="wm-category-projects-block">
-                <div class="wm-category-projects-block__item ">
+                <div class="wm-category-projects-block__item">
                     <a href="#" class="wm-main-item">
                         <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
                         <div class="wm-main-item__info">
@@ -301,16 +308,15 @@
                 </div>
                 <div class="wm-question-block__info">
                     <div class="wm-question-info">
-                        <h2 class="wm-question-info__title">У Вас остались к нам вопросы?</h2>
+                        <h2 class="wm-question-info__title sub-title">У Вас остались к нам вопросы?</h2>
                         <div class="wm-question-info__sub-title">Закажите бесплатную консультацию!</div>
                         <div class="wm-question-info__form">
                             <form action="" class="wm-question-info-form">
                                 <div class="wm-question-info-form__inputs">
-                                    <input type="text"/>
-                                    <input type="tel"/>
-                                    <input type="submit" value="Отправить заявку"/>
+                                    <input class="wm-question-info-form-input main-input" type="text" name="Name" placeholder="Имя"/>
+                                    <input class="wm-question-info-form-input main-input" type="tel" name="Phone" placeholder="Телефон"/>
+                                    <input class="wm-question-info-form-btn sub-main" type="submit" value="Отправить заявку"/>
                                 </div>
-                                <div class="wm-question-info-form__dispatch">Заявка еще не отправлена</div>
                             </form>
                         </div>
                     </div>
@@ -332,27 +338,27 @@
                                 <div class="wm-footer-agreement__link">Смотреть договор</div>
                             </a>
                         </div>
-                        <div class="wm-footer-right__column">
-                            <nav class="wm-footer-navigation">
+                        <div class="wm-footer-right__column wm-footer-right__navigation">
+                            <nav class="wm-footer-navigation wm-footer-navigation wm-footer-navigation--left">
                                 <ul>
-                                    <li><a href="#">О компании</a></li>
-                                    <li><a href="#">Наши работы</a></li>
-                                    <li><a href="#">Отзывы</a></li>
-                                    <li><a href="#">Цены</a></li>
-                                    <li><a href="#">Статьи</a></li>
-                                    <li><a href="#">Контакты</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">О компании</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Наши работы</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Отзывы</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Цены</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Статьи</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Контакты</a></li>
                                 </ul>
                             </nav>
-                        </div>
-                        <div class="wm-footer-right__column">
-                            <nav class="wm-footer-navigation">
+                        <!--</div>-->
+                        <!--<div class="wm-footer-right__column">-->
+                            <nav class="wm-footer-navigation wm-footer-navigation--right">
                                 <ul>
-                                    <li><a href="#">Дома из бруса</a></li>
-                                    <li><a href="#">Каркасные дома</a></li>
-                                    <li><a href="#">Дома под усадку</a></li>
-                                    <li><a href="#">Бани из бруса</a></li>
-                                    <li><a href="#">В кредит</a></li>
-                                    <li><a href="#">Материнский капитал</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Дома из бруса</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Каркасные дома</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Дома под усадку</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Бани из бруса</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">В кредит</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link"s>Материнский капитал</a></li>
                                 </ul>
                             </nav>
                         </div>
