--- a/index.html
+++ b/index.html
@@ -330,7 +330,6 @@
                                     <input class="wm-question-info-form-input main-input" type="tel" name="Phone" placeholder="Телефон"/>
                                     <input class="wm-question-info-form-btn sub-main" type="submit" value="Отправить заявку"/>
                                 </div>
-                                <div class="wm-question-info-form__dispatch">Заявка еще не отправлена</div>
                             </form>
                         </div>
                     </div>
@@ -352,8 +351,8 @@
                                 <div class="wm-footer-agreement__link">Смотреть договор</div>
                             </a>
                         </div>
-                        <div class="wm-footer-right__column">
-                            <nav class="wm-footer-navigation">
+                        <div class="wm-footer-right__column wm-footer-right__navigation">
+                            <nav class="wm-footer-navigation wm-footer-navigation wm-footer-navigation--left">
                                 <ul>
                                     <li><a href="#" class="wm-footer-navigation__link">О компании</a></li>
                                     <li><a href="#" class="wm-footer-navigation__link">Наши работы</a></li>
@@ -365,7 +364,7 @@
                             </nav>
                         <!--</div>-->
                         <!--<div class="wm-footer-right__column">-->
-                            <nav class="wm-footer-navigation">
+                            <nav class="wm-footer-navigation wm-footer-navigation--right">
                                 <ul>
                                     <li><a href="#" class="wm-footer-navigation__link">Дома из бруса</a></li>
                                     <li><a href="#" class="wm-footer-navigation__link">Каркасные дома</a></li>
