--- a/category.html
+++ b/category.html
@@ -21,7 +21,7 @@
                     <div class="wm-top__block">
                         <div class="wm-block__logo">
                             <div class="wm-logo">
-                                <a href="#"><img class="wm-logo__img" src="images/logo.png" alt="logo" width="194" height="49"></a>
+                                <a href="http://test.pengstud.com/woodman/index.html"><img class="wm-logo__img" src="images/logo.png" alt="logo" width="194" height="49"></a>
                             </div>
                         </div>
                         <div class="wm-block__buttons">
@@ -49,7 +49,7 @@
                         <nav class="wm-navigation">
                             <ul>
                                 <li><a href="#" class="wm-navigation__link">О компании</a></li>
-                                <li><a href="#" class="wm-navigation__link">Проекты</a></li>
+                                <li><a href="http://test.pengstud.com/woodman/category.html" class="wm-navigation__link" class="wm-navigation__link">Проекты</a></li>
                                 <li><a href="#" class="wm-navigation__link">Цены</a></li>
                                 <li><a href="#" class="wm-navigation__link">Наши работы</a></li>
                                 <li><a href="#" class="wm-navigation__link">Отзывы</a></li>
@@ -189,7 +189,7 @@
                         <div class="wm-sorting-radio-block">
                             <span class="wm-sorting-radio-block__text">Сортировать по цене</span>
                             <div class="wm-sorting-radio-block__input">
-                                <input type="radio" name="wm-sorting" id="wm-sorting-1" class="wm-sorting__input" value="up"><label for="wm-sorting-1"><i class="fa fa-chevron-circle-up" aria-hidden="true"></i></label><input type="radio" name="wm-sorting" id="wm-sorting-2" class="wm-sorting__input" value="down"><label for="wm-sorting-2"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></label>
+                                <input type="radio" name="wm-sorting" id="wm-sorting-1" class="wm-sorting__input" value="up"><label for="wm-sorting-1"><i class="fa fa-chevron-circle-up" aria-hidden="true"></i></label><input type="radio" name="wm-sorting" id="wm-sorting-2" class="wm-sorting__input" value="down" checked><label for="wm-sorting-2"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></label>
                             </div>
                         </div>
                     </div>
@@ -207,60 +207,133 @@
         <div class="main">
             <div class="wm-category-projects-block">
                 <div class="wm-category-projects-block__item">
-                    <a href="#" class="wm-main-item">
-                        <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
-                        <div class="wm-main-item__info">
-                            <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
-                            <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
-                            <div class="wm-main-item__price">От 220 000 руб</div>
-                        </div>
-                    </a>
-                    <a href="#" class="wm-main-item">
-                        <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
-                        <div class="wm-main-item__info">
-                            <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
-                            <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
-                            <div class="wm-main-item__price">От 220 000 руб</div>
-                        </div>
-                    </a>
-                    <a href="#" class="wm-main-item">
-                        <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
-                        <div class="wm-main-item__info">
-                            <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
-                            <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
-                            <div class="wm-main-item__price">От 220 000 руб</div>
-                        </div>
-                    </a>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="wm-category-projects-block__item wm-category-projects-item-hidden">
-                    <a href="#" class="wm-main-item">
-                        <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
-                        <div class="wm-main-item__info">
-                            <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
-                            <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
-                            <div class="wm-main-item__price">От 220 000 руб</div>
-                        </div>
-                    </a>
-                    <a href="#" class="wm-main-item">
-                        <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
-                        <div class="wm-main-item__info">
-                            <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
-                            <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
-                            <div class="wm-main-item__price">От 220 000 руб</div>
-                        </div>
-                    </a>
-                    <a href="#" class="wm-main-item">
-                        <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
-                        <div class="wm-main-item__info">
-                            <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
-                            <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
-                            <div class="wm-main-item__price">От 220 000 руб</div>
-                        </div>
-                    </a>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="wm-category-projects-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
+                            <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
+                            <div class="wm-main-item__info">
+                                <div class="wm-main-item__name"><span>Дом из бруса под ключ проект Д-36-К</span></div>
+                                <div class="wm-main-item__size">6 м х 6 м / 64 м<sup>2</sup></div>
+                                <div class="wm-main-item__price">От 220 000 руб</div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="wm-category-projects__more">
                 <div class="wm-category-projects-more">
+                    <img class="wm-category-projects-more__image" src="images/circular%20arrow.png" alt="" width="117" height="106"/>
                     <div class="wm-category-projects-more__text">Показать еще</div>
                 </div>
             </div>
