--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="wm-top__block">
                         <div class="wm-block__logo">
                             <div class="wm-logo">
-                                <a href="#"><img class="wm-logo__img" src="images/logo.png" alt="logo" width="194" height="49"></a>
+                                <a href="http://test.pengstud.com/woodman/index.html"><img class="wm-logo__img" src="images/logo.png" alt="logo" width="194" height="49"></a>
                             </div>
                         </div>
                         <div class="wm-block__buttons">
@@ -49,7 +49,7 @@
                         <nav class="wm-navigation">
                             <ul>
                                 <li><a href="#" class="wm-navigation__link">О компании</a></li>
-                                <li><a href="#" class="wm-navigation__link">Проекты</a></li>
+                                <li><a href="http://test.pengstud.com/woodman/category.html" class="wm-navigation__link">Проекты</a></li>
                                 <li><a href="#" class="wm-navigation__link">Цены</a></li>
                                 <li><a href="#" class="wm-navigation__link">Наши работы</a></li>
                                 <li><a href="#" class="wm-navigation__link">Отзывы</a></li>
@@ -107,7 +107,7 @@
             <div class="wm-popular-projects__block">
                 <div class="wm-popular-projects-block">
                     <div class="wm-popular-projects-block__item">
-                        <a href="#" class="wm-main-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
                             <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
                             <div class="wm-main-item__info">
                                 <div class="wm-main-item__name"><span class="wm-main-item-name">Дом из бруса под ключ проект Д-36-К</span></div>
@@ -117,7 +117,7 @@
                         </a>
                     </div>
                     <div class="wm-popular-projects-block__item">
-                        <a href="#" class="wm-main-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
                             <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
                             <div class="wm-main-item__info">
                                 <div class="wm-main-item__name"><span class="wm-main-item-name">Дом из бруса под ключ проект Д-36-К</span></div>
@@ -127,7 +127,7 @@
                         </a>
                     </div>
                     <div class="wm-popular-projects-block__item">
-                        <a href="#" class="wm-main-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
                             <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
                             <div class="wm-main-item__info">
                                 <div class="wm-main-item__name"><span class="wm-main-item-name">Дом из бруса под ключ проект Д-36-К</span></div>
@@ -137,7 +137,7 @@
                         </a>
                     </div>
                     <div class="wm-popular-projects-block__item">
-                        <a href="#" class="wm-main-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
                             <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
                             <div class="wm-main-item__info">
                                 <div class="wm-main-item__name"><span class="wm-main-item-name">Дом из бруса под ключ проект Д-36-К</span></div>
@@ -147,7 +147,7 @@
                         </a>
                     </div>
                     <div class="wm-popular-projects-block__item">
-                        <a href="#" class="wm-main-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
                             <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
                             <div class="wm-main-item__info">
                                 <div class="wm-main-item__name"><span class="wm-main-item-name">Дом из бруса под ключ проект Д-36-К</span></div>
@@ -157,7 +157,7 @@
                         </a>
                     </div>
                     <div class="wm-popular-projects-block__item">
-                        <a href="#" class="wm-main-item">
+                        <a href="http://test.pengstud.com/woodman/card_item.html" class="wm-main-item">
                             <div class="wm-main-item__image"><img src="images/project.png" alt="project" width="372" height="200"/></div>
                             <div class="wm-main-item__info">
                                 <div class="wm-main-item__name"><span class="wm-main-item-name">Дом из бруса под ключ проект Д-36-К</span></div>
